# bonuscheck_bot

./: .env.example  .gitignore  Makefile  Readme.md  pyproject.toml
app/: runbot.py
app/applications/checks/: admin.py  apps.py  mixins.py  models.py
app/applications/checks/migrations/: 0001_initial.py  0002_alter_bonus_balance.py  0003_product_bonus.py  0004_product_code.py  0005_alter_product_bonus_alter_product_code.py
app/applications/outputs/: admin.py  apps.py  mixins.py  models.py
app/applications/outputs/migrations/: 0001_initial.py  0002_alter_minbalance_balance.py  0003_output_send_data.py  0004_alter_output_send_data.py
app/applications/tokens/: admin.py  apps.py  models.py
app/applications/tokens/migrations/: 0001_initial.py  0002_token_created_at.py  0003_alter_token_token.py
app/applications/users/: admin.py  forms.py  mixins.py  models.py
app/applications/users/migrations/: 0001_initial.py  0002_alter_users_options_alter_users_bonus_balance.py  0002_users_username.py  0003_code_excel_file.py  0003_codeword.py  0004_alter_code_keycode.py  0004_alter_codeword_word.py  0005_alter_code_excel_file.py  0005_check_bonus_balance_alter_check_qr_data.py  0006_alter_users_username.py  0007_users_is_admin_product.py  (+7 more)
app/bot/: services.py
app/bot/filters/: role.py
app/bot/handlers/: user_handler.py
app/bot/keyboards/: keyboards.py
app/bot/middlewares/: role.py
app/config/: settings.py
app/interface/: backend.py  proverkacheka.py
app/templates/admin/: import_codes.html  inactive_codes.html
docker/: .env.example  docker-compose.prod.yml
(+1 files in other folders)
